2006-07-11  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-load.c
	* app/xcf/xcf-private.h
	* app/xcf/xcf-save.c
	* app/xcf/xcf.c: do progress updates when loading/saving XCF files. 

2006-07-11  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf.c: minor cleanup.

	* app/core/gimpimage-merge.[ch]: made gimp_image_merge_layers() a
	static function, it isn't used outside this file.

2006-07-10  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-load.c: use a signed variable when attempting to
	skip over unknown properties and check for EOF.  Fixes bug #345802.

	* app/xcf/xcf-read.c: cleanup, nothing really changed

2006-07-10  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.c: documentation based on a patch from
	Tom Lechner (bug #346959).

2006-07-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/spheredesigner.c: don't cast between GimpRGB and
	GimpVector; it works but it's ugly and caused compiler warnings.

2006-07-07  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/preferences-dialog.c (prefs_dialog_new): changed
	"display" to "image window" in user visible string.

2006-07-07  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in
	* app/gui/gui.c: relaxed required version for gtk+ to 2.8.17 and
	pango to 1.12.2 so that it compiles on Ubuntu (Dapper Drake).

2006-07-07  Sven Neumann  <sven@gimp.org>

	Use Ctrl-P as the default keyboard shortcut for Print (bug #302870):

	* app/actions/dialogs-actions.c: removed Ctrl-P shortcut from
	Palettes dialog.

	* etc/Makefile.am
	* etc/menurc: added a default menurc file that binds Ctrl-P to
	file-print-gtk.

	* app/core/gimp-user-install.c: install the default menurc.

2006-07-07  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcoloreditor.c
	* libgimpwidgets/gimpcolorselection.c: in the tooltip for the hex
	entry, mention that it also accepts CSS color names.

	* libgimpwidgets/gimpwidgets.c (gimp_scale_entry_new_internal):
	use an invisible event box for the tooltip.
